include/gre/greio.h

/**
 * Event Data Conversion Routines.
 */

/**
 * Convert an array of parsable string segments (ie [0]4s1:value [1]20 [3]1s0:name [4]Crank ...)
 * into a memory block and event format string.  Clients are responsible for the memory
 * associated with the returned format string and the event data and should call free() to
 * deallocated it when they are finished.
 *
 * @param argv  A pointer to format/value segments
 * @param argc  The number of segments in argv
 * @param event_data   A pointer to a pointer where the event data can be stored.
 * @param event_data_nbytes   The number of bytes of data event_data points at
 * @return A format string describing the memory block or NULL on failure
 */
char * greio_array_to_event_data(char **argv, int argc, void **event_data, int *event_data_nbytes);
/**
 * Convert a parsable data string to a memory block and event format string. Clients are
 * responsible for the memory associated with the returned format string and the event
 * data and should call free() to deallocated it when they are finished.
 *
 * @param data_string  A non-nul data and format string (from greio_event_data_to_string)
 * @param event_data   A pointer to a pointer where the event data can be stored.
 * @param event_data_nbytes   The number of bytes of data event_data points at
 * @return A format string describing the memory block or NULL on failure
 */
char * greio_string_to_event_data(char *data_string, void **event_data, int *event_data_nbytes);
/**
 * Convert an user data event payload to a parseable data string.  Client are expected to
 * expect a NULL return code if the format string or data is empty. Clients are responsible for
 * the memory associated with the string returned and should call free() to deallocate it.
 *
 * @param event_format 	A nul terminated string that contains a standard format string
 * @param event_data    A pointer to a block of memory to be interpreted via event_format
 * @param event_data_nbytes The number of bytes that event_data points to
 * @return An allocated string parsable via greio_string_to_event_data or NULL on failure
 */
char * greio_event_data_to_string(char *event_format, void *event_data, int event_data_nbytes);