src/sbio/bindings.rs

extern "C" {
    #[doc = " Convert an array of parsable string segments (ie [0]4s1:value [1]20 [3]1s0:name [4]Crank ...)\n into a memory block and event format string.  Clients are responsible for the memory\n associated with the returned format string and the event data and should call free() to\n deallocated it when they are finished.\n\n @param argv  A pointer to format/value segments\n @param argc  The number of segments in argv\n @param event_data   A pointer to a pointer where the event data can be stored.\n @param event_data_nbytes   The number of bytes of data event_data points at\n @return A format string describing the memory block or NULL on failure"]
    pub fn greio_array_to_event_data(
        argv: *mut *mut ::std::os::raw::c_char,
        argc: ::std::os::raw::c_int,
        event_data: *mut *mut ::std::os::raw::c_void,
        event_data_nbytes: *mut ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Convert a parsable data string to a memory block and event format string. Clients are\n responsible for the memory associated with the returned format string and the event\n data and should call free() to deallocated it when they are finished.\n\n @param data_string  A non-nul data and format string (from greio_event_data_to_string)\n @param event_data   A pointer to a pointer where the event data can be stored.\n @param event_data_nbytes   The number of bytes of data event_data points at\n @return A format string describing the memory block or NULL on failure"]
    pub fn greio_string_to_event_data(
        data_string: *mut ::std::os::raw::c_char,
        event_data: *mut *mut ::std::os::raw::c_void,
        event_data_nbytes: *mut ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Convert an user data event payload to a parseable data string.  Client are expected to\n expect a NULL return code if the format string or data is empty. Clients are responsible for\n the memory associated with the string returned and should call free() to deallocate it.\n\n @param event_format \tA nul terminated string that contains a standard format string\n @param event_data    A pointer to a block of memory to be interpreted via event_format\n @param event_data_nbytes The number of bytes that event_data points to\n @return An allocated string parsable via greio_string_to_event_data or NULL on failure"]
    pub fn greio_event_data_to_string(
        event_format: *mut ::std::os::raw::c_char,
        event_data: *mut ::std::os::raw::c_void,
        event_data_nbytes: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
